--- a/library-helm/templates/deployment.yaml
+++ b/library-helm/templates/deployment.yaml
@@ -17,6 +17,10 @@ spec:
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "{{ .Values.service.metricsport }}"
+        prometheus.io/path: "/metrics"
       labels:
         {{- include "libhelm.selectorLabels" . | nindent 8 }}
     spec:
@@ -25,15 +29,15 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: grpc
-              containerPort: {{ .Values.service.port }}
-              protocol: TCP
-            - name: prometheus
-              containerPort: {{ .Values.service.metricsport }}
-              protocol: TCP
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+        
+name: {{ .Chart.Name }}
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        ports:
+name: grpc
+          containerPort: {{ .Values.service.port }}
+          protocol: TCP
+name: prometheus
+        containerPort: {{ .Values.service.metricsport }}
+        protocol: TCP
+    resources:{{- toYaml .Values.resources | nindent 12 }}
