--- a/library-helm/templates/deployment.yaml
+++ b/library-helm/templates/deployment.yaml
@@ -29,15 +29,14 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
-        
-name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
-        ports:
-name: grpc
-          containerPort: {{ .Values.service.port }}
-          protocol: TCP
-name: prometheus
-        containerPort: {{ .Values.service.metricsport }}
-        protocol: TCP
-    resources:{{- toYaml .Values.resources | nindent 12 }}
+        - name: {{ .Chart.Name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - name: grpc
+              containerPort: {{ .Values.service.port }}
+              protocol: TCP
+            - name: prometheus
+              containerPort: {{ .Values.service.metricsport }}
+              protocol: TCP
+          resources: {{- toYaml .Values.resources | nindent 12 }}
